--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-toastify": "9.0.1",
     "recharts": "2.1.9"
   },
   "scripts": {
@@ -41,7 +42,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
-    "cypress": "^9.6.1",
+    "cypress": "9.6.1",
     "eslint": "8.15.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-cypress": "^2.12.1",
