--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-toastify": "9.0.1",
-    "recharts": "2.1.9"
+    "recharts": "2.1.9",
+    "sass": "^1.52.3"
   },
   "scripts": {
     "start": "react-scripts start",
